# ase_exercises

./: .gitmodules  README.md
exercise/: CMakeLists.txt  package.xml
exercise/launch/: beacon_navigation.launch  line_following_gazebo_amiro.launch  line_following_real_amiro.launch  mapping_project.launch  mapping_with_known_poses.launch  teleop.launch  wall_following.launch
exercise/maps/: cafe.pgm  cafe.yaml  cafe_obstacles.pgm  cafe_obstacles.yaml
exercise/rviz/: mapping_project.rviz  mapping_with_known_poses.rviz
exercise/src/: beacon_navigation.cpp  line_following_node.cpp  mapping_evaluation.py  mapping_with_known_poses.cpp  wall_following.cpp
exercise/worlds/: cafe.world  cafe_obstacles.world  wall.world
